# UltraCanvas

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Master_functions.md  Masterfile_modules.md  README.md  SignUltraDemo.ps1  SignUltraTexter.ps1  THIRD_PARTY_LICENSES.md  build-demoapp-appimage.sh  build-texter-appimage.sh  build-win.cmd  master_dependencies.yaml  package-macos.sh  package-win.sh  set-version.sh
Apps/AnchorPoint/: CMakeLists.txt  README.md
Apps/AnchorPoint/cli/: main.cpp
Apps/AnchorPoint/gui/: AnchorPointApp.cpp  AnchorPointApp.h  main.cpp
Apps/AnchorPoint/net/: Protocol.cpp  Protocol.h  RawSocketTransport.cpp  Sha256.h  Transport.h
Apps/UltraMail/: CMakeLists.txt  README.md  main.cpp
Apps/UltraMail/engine/: UltraMailAttachmentCache.cpp  UltraMailAttachmentCache.h  UltraMailComposer.cpp  UltraMailComposer.h  UltraMailContactCollector.cpp  UltraMailContactCollector.h  UltraMailContactStore.cpp  UltraMailContactStore.h  UltraMailContacts.cpp  UltraMailContacts.h  UltraMailCredentialVault.cpp  UltraMailCredentialVault.h  UltraMailDiscovery.cpp  UltraMailDiscovery.h  UltraMailLocalStore.cpp  UltraMailLocalStore.h  UltraMailMimeCodec.cpp  UltraMailMimeCodec.h  UltraMailOutbox.cpp  UltraMailOutbox.h  UltraMailSender.cpp  UltraMailSender.h  UltraMailSyncEngine.cpp  UltraMailSyncEngine.h  UltraMailSyncScheduler.cpp  UltraMailSyncScheduler.h  UltraMailSyncService.cpp  UltraMailSyncService.h  UltraMailTypes.cpp  UltraMailTypes.h
Apps/UltraMail/ui/: UltraMailAccountWizard.cpp  UltraMailAccountWizard.h  UltraMailApp.cpp  UltraMailApp.h  (+12 more)
Tests/: CMakeLists.txt  EBookArchiveTest.cpp  EBookEngineTest.cpp  EBookViewerTest.cpp  FocusHistoryTest.cpp  HTMLReaderTest.cpp  SpreadsheetNumberFormatTest.cpp  SpreadsheetOdsFormulaTest.cpp  UCStringTest.cpp  WordFormatsTest.cpp
Tests/DataFormats/: JSONTests.cpp
Tests/UltraDatabase/: CMakeLists.txt  test_framework.h  test_main.cpp  test_ultradatabase.cpp
Tests/UltraMail/: CMakeLists.txt  test_attachments.cpp  test_composer.cpp  test_contacts.cpp  test_discovery.cpp  test_framework.h  test_localstore.cpp  test_main.cpp  test_outbox.cpp  test_scheduler.cpp  test_syncengine.cpp
Tests/UltraNet/: CMakeLists.txt  test_dns_format.cpp  test_extra_plugins.cpp  test_framework.h  test_ftp_parser.cpp  test_headers.cpp  test_imap_mailbox.cpp  test_imap_plugin.cpp  test_jmap_plugin.cpp  test_loopback.cpp  test_main.cpp  test_mime.cpp  test_plugins.cpp  test_pop3_plugin.cpp  test_result.cpp  test_smtp_plugin.cpp  test_sse.cpp  test_url.cpp  test_websocket.cpp
Tests/fixtures/: legacy-word97.doc
UltraAI/: CMakeLists.txt  README.md
UltraAI/Docs/: UltraNetIntegration.md  UltraVault.md
UltraAI/adapters/: CMakeLists.txt
UltraAI/include/: UltraAI.h  UltraAICodeAssist.h  UltraAICommon.h  UltraAIEmbeddings.h  UltraAIImageGen.h  UltraAIMusicGen.h  UltraAISpeechToText.h  UltraAITextLLM.h  UltraAITextToSpeech.h  UltraAITranslator.h  UltraAIVideoGen.h  UltraAIVisionAnalyzer.h
UltraAI/src/: CapabilityFactories.cpp  TextLLMFactory.cpp
UltraAI/tests/: CMakeLists.txt  test_mock_capabilities.cpp  test_mock_more_capabilities.cpp  test_mock_textllm.cpp
UltraCanvas/: CHANGELOG.md  CMakeLists.txt  EBookSupport_Documentation.md  UltraCanvasImageLoader.cpp  eBook_README.md
UltraCanvas/PixelFX/: PixelFX.cpp  PixelFXImageInfo.cpp  VipsQOILoader.cpp
UltraCanvas/cmake/: VendoredCurl.cmake
UltraCanvas/core/: UltraCanvasAlbum.cpp  UltraCanvasApplication.cpp  UltraCanvasAudio.cpp  UltraCanvasAudioDevices.cpp  UltraCanvasAudioPlayer.cpp  UltraCanvasAudioPlayerElement.cpp  UltraCanvasAudioRecorder.cpp  UltraCanvasAudioRecorderElement.cpp  UltraCanvasAutoComplete.cpp  UltraCanvasBadge.cpp  UltraCanvasBoxLayout.cpp  UltraCanvasBreadcrumb.cpp  UltraCanvasButton.cpp  UltraCanvasCaret.cpp  UltraCanvasCheckbox.cpp  UltraCanvasChip.cpp  UltraCanvasClipboard.cpp  UltraCanvasColorPicker.cpp  UltraCanvasCommonTypes.cpp  UltraCanvasConfig.cpp  UltraCanvasContainer.cpp  UltraCanvasDatePicker.cpp  UltraCanvasDirtyRectManager.cpp  UltraCanvasDropdown.cpp  UltraCanvasEBookTypes.cpp  UltraCanvasEBookViewer.cpp  UltraCanvasElementDebug.cpp  UltraCanvasEvent.cpp  UltraCanvasEventDispatcher.cpp  UltraCanvasFileLoader.cpp  UltraCanvasFilerWidget.cpp  UltraCanvasFlexLayout.cpp  UltraCanvasGLSurface.cpp  UltraCanvasGridLayout.cpp  UltraCanvasGroupBox.cpp  UltraCanvasHTMLLayout.cpp  UltraCanvasImageAnimation.cpp  UltraCanvasImageElement.cpp  UltraCanvasImageLoader.cpp  UltraCanvasImageViewer.cpp  (+74 more)
UltraCanvas/dialogs/: UltraCanvasCSVExportDialog.cpp  UltraCanvasCSVImportDialog.cpp  UltraCanvasImageExportDialog.cpp  UltraCanvasImageExportDialog.h  UltraCanvasMemoryStatsDialog.cpp  UltraCanvasMemoryStatsDialog.h
UltraCanvas/include/: RenderSurfaceTypes.h  UltraCanvas3DModelElement.h  UltraCanvasAdvancedControls.h  UltraCanvasAlbum.h  UltraCanvasAlert.h  UltraCanvasApplication.h  UltraCanvasAudio.h  UltraCanvasAudioDevices.h  UltraCanvasAudioElement.h  UltraCanvasAudioPlayer.h  UltraCanvasAudioPlayerElement.h  UltraCanvasAudioRecorder.h  UltraCanvasAudioRecorderElement.h  UltraCanvasAutoComplete.h  UltraCanvasBadge.h  UltraCanvasBaseApplication.h  UltraCanvasBaseWindow.h  UltraCanvasBoxLayout.h  UltraCanvasBreadcrumb.h  UltraCanvasButton.h  UltraCanvasButton3Sections.h  UltraCanvasCSVExportDialog.h  UltraCanvasCSVImport.h  UltraCanvasCSVImportDialog.h  UltraCanvasCairoDebugExtension.h  UltraCanvasCaret.h  UltraCanvasCheckbox.h  UltraCanvasChip.h  UltraCanvasClipboard.h  UltraCanvasColorPicker.h  UltraCanvasCommonTypes.h  UltraCanvasConfig.h  UltraCanvasContainer.h  UltraCanvasCore.h  UltraCanvasDatePicker.h  UltraCanvasDebug.h  UltraCanvasDiagramRenderer.h  UltraCanvasDirtyRectManager.h  UltraCanvasDrawingSurface.h  UltraCanvasDropdown.h  (+120 more)
UltraCanvas/libspecific/: ImageCairo.cpp  ImageCairo.h
VirtualFS/: CMakeLists.txt  README.md  VirtualFS_Master_Registry_V1.md
VirtualFS/cmake/: VirtualFSConfig.cmake.in
VirtualFS/core/: VirtualFSCompression.cpp  VirtualFSManager.cpp
VirtualFS/providers/: VirtualFSLibArchiveProvider.cpp  VirtualFSLibArchiveProvider.h
(+770 files in other folders)
